fixed mission spacing

--- a/neural/static/neural/styles.css
+++ b/neural/static/neural/styles.css
@@ -90,6 +90,7 @@ filter: grayscale(60%);
     justify-content: space-evenly;
     background-color: #28282B;
     padding-top: 150px;
+
 }
 
 .mission_section {
@@ -98,6 +99,7 @@ filter: grayscale(60%);
     color: #fff;
     padding-bottom: 10%;
     border-bottom: solid 1px #A9A9A9;
+    flex:1;
 }
 
 .mission_section p {
@@ -105,7 +107,8 @@ filter: grayscale(60%);
     font-weight:230;
     text-align: left;  
     font-size: 22px;
-    max-width: 50%;
+    max-width: 70%;
+    max-height: 45%;
     margin-bottom: 60px;
 }
 
@@ -145,6 +148,7 @@ filter: grayscale(60%);
     flex-wrap: nowrap;
     align-items: flex-start;
     padding-top: 60px;
+    flex: 1; 
 }
 
 .information {
